# aun-sdk-core

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
python/: .gitignore  CHANGELOG.md  CHANGES_FOR_PARITY.md  LICENSE  MANIFEST.in  README.md  migrate-seed.py  pyproject.toml  run-service-proxy-holder.bat  run-service-proxy-visitor.bat  run-single-domain-tests.ps1  sync_docs.py  test_push_with_trace.py  test_trace_manual.py
python/.aun_test_reconnect/: .seed
python/.tmp-tests/auth-310db0a141234f718c7cb71a50ea227a/: root.pem
python/.tmp-tests/auth-472c5a67aa1346dabf24d5710720d8e8/: root.pem
python/.tmp-tests/auth-47758f0d812c47e49e115a49fcd0422e/: root.pem
python/.tmp-tests/auth-54b7cab1788b4cc2aa373405d7208265/: root.pem
python/.tmp-tests/auth-61f5b98a4917453bb79d37cdd934ec82/: root.pem
python/.tmp-tests/auth-63dd3dc1e2024731bfed34dc98013f01/: root.pem
python/.tmp-tests/auth-6983cc74a20042f88a2d54f00b1ccf27/: root.pem
python/.tmp-tests/auth-772f0cda0c3b48768f596d194bc3a780/: root.pem
python/.tmp-tests/auth-9edeefe7e3b24e2a960d7bf4ecca61a0/: root.pem
python/.tmp-tests/auth-b3b2060e1b1d40e095691b2fa6851617/: root.pem
python/.tmp-tests/auth-cd162a9e975147eeb85c969925d93b20/: root.pem
python/.tmp-tests/auth-cf3cfbc2086d431094d4c9866b115aa2/: root.pem
python/.tmp-tests/auth-ee886c5a97b34ec6bb3ceea060ac15b5/: root.pem
python/.tmp-tests/auth-fd8abb001f5f491181f2d6ad8b260e6e/: root.pem
python/.tmp-tests/auth-fe8de237fa154432bcef4d49828af3a6/: root.pem
python/docs/: 01-快速开始.md  03-核心概念.md  04-连接与认证.md  05-E2EE加密通信.md  06-API手册.md  07-错误处理.md  08-最佳实践.md  INDEX.md  README.md
python/src/aun_cli/: __init__.py  __main__.py  adapter.py  config.py  fs_utils.py  main.py  output.py  storage_core.py
python/src/aun_core/: __init__.py  _cert_utils.py  agent_md.py  aid.py  aid_store.py  auth.py  cert_verifier.py  client.py  config.py  crypto.py  discovery.py  e2ee.py  error_codes.py  errors.py  events.py  facades.py  group_fs.py  group_id.py  group_index.py  group_repo_gc.py  logger.py  message_db_gc.py  net.py  register_flow.py  result.py  seq_tracker.py  transport.py  types.py  validators.py
python/src/aun_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/aun_sdk_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: aun_refactor_helpers.py  conftest.py  e2e_test_collab_docker.py  e2e_test_echo.py  e2e_test_epoch_key_server.py  e2e_test_fs_p1.py  e2e_test_fs_p2.py  e2e_test_fs_p3.py  e2e_test_fs_p4.py  e2e_test_fs_p6.py  e2e_test_group_e2ee.py  e2e_test_group_fs_cli.py  e2e_test_group_fs_sdk.py  e2e_test_group_index.py  e2e_test_group_online_unread_chain.py  e2e_test_group_storage.py  e2e_test_long_short_cli.py  e2e_test_message_thought.py  e2e_test_notify.py  e2e_test_proximity.py  e2e_test_service_proxy_docker.py  e2e_test_signature_audit.py  e2e_test_slot_id_separator.py  e2e_test_slot_id_storm.py  e2e_test_token_refresh.py  e2e_test_trace.py  e2e_test_v2_1dh_wrap.py  e2e_test_v2_group_e2ee.py  e2e_test_v2_multi_device.py  e2e_test_v2_p2p_e2ee.py  e2e_test_v2_thought.py  integration_test_cli_storage.py  integration_test_collab_group_acl.py  integration_test_e2ee.py  integration_test_fs_p1.py  integration_test_fs_p2.py  integration_test_fs_p3.py  integration_test_fs_p4.py  integration_test_fs_p6.py  integration_test_gap_fill.py  (+34 more)
python/tests/conformance/: README.md  __init__.py  fixtures.py  generate_golden_outputs.py  test_1dh.py  test_3dh.py  test_aead.py  test_canonical.py  test_e2ee_v2_spk_id_semantics.py  test_ecdh.py  test_ecdsa.py  test_hkdf.py  test_m1_auth_negotiation.py  test_m2_p2p_e2e_mock.py  test_m2_p2p_encrypt.py  test_m3_cache.py  test_m3_multi_device.py  test_m3_self_sync.py  test_m5_gc.py  test_recipients_digest.py  test_state_commitment.py
python/tests/integration/: test_collab_gc_e2e.py
python/tests/unit/: test_aid.py  test_aid_store_network.py  test_aid_store_offline.py  test_auth.py  test_auth_namespace_agent_md.py  test_cli_agentmd.py  test_cli_bench.py  test_cli_bench_e2e.py  test_cli_collab_exit_codes.py  test_cli_config.py  test_cli_fs_p1.py  test_cli_fs_p2.py  test_cli_fs_p3.py  test_cli_fs_p4.py  test_cli_fs_p5.py  test_cli_fs_p6.py  test_cli_group.py  test_cli_group_fs.py  test_cli_group_fs_contract.py  test_cli_group_storage.py  (+74 more)
(+1053 files in other folders)
