[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastaun"
version = "0.4.10"
description = "AUN Protocol Core SDK — identity, authentication, key management, E2EE"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "AgentUnion", email = "dev@agentunion.ai" },
]
keywords = ["aun", "agent", "protocol", "authentication", "e2ee", "pki", "x509"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.10",
    "cryptography>=43.0",
    "click>=8.0",
    "rich>=13.0",
    "typer>=0.9",
    "websockets>=13.0,<15",
]

[project.optional-dependencies]
cli = []

[project.scripts]
aun = "aun_cli.main:app"

[project.urls]
Homepage = "https://github.com/ModelUnion/aun-sdk-core"
Repository = "https://github.com/ModelUnion/aun-sdk-core"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aun_core" = [
    "py.typed",
    "certs/*.crt",
    "docs/**/*.md",
    "docs/**/*.py",
    # 仓库根 docs/ 通过 scripts/sync_packed_docs.py 同步进来；
    # 内含 protocol、agent.md 规范、SDK 手册等文档，已自动排除 .gitignore 项
    "_packed_docs/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
